# GoIT_PyWEB_hm11

./: README.md  app.py  pyproject.toml
repo/: models.py  p_a.db
src/: connect.py
templates/: 404.html  contact.html  detail.html  email.html  index.html  phone.html  update_email.html  update_phone.html
