[tool.poetry]
name = "the flask"
version = "0.1.0"
description = ""
authors = ["Сергей Сытник <sytnikserhii22038@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
SQLAlchemy = "^1.4.41"
Flask-SQLAlchemy = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
